<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="my_app_list">My Nanodegree Apps!</string>
    <string name="streamer_app_title">Spotify Streamer</string>
    <string name="score_app_title">Scores app</string>
    <string name="lib_app_title">Library app</string>
    <string name="build_it_bigger_app_title">Build it bigger</string>
    <string name="reader_app_title">Bacon reader</string>
    <string name="capstone_app_title">CAPSTONE: My own app</string>



</resources>
