<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
            android:background="@color/bgcolor"
            android:id="@+id/my_layout"
            android:touchscreenBlocksFocus="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/my_app_list"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:autoText="false"
                android:textColor="@color/black"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/streamer_app_title"
                android:id="@+id/media_streamer"
                android:layout_below="@+id/textView"
                android:layout_marginTop="41dp"
                android:background="@color/orange"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:layout_alignRight="@+id/textView"
                android:layout_alignEnd="@+id/textView"
                android:textColor="@color/white"
                android:elegantTextHeight="false"
                style="@style/Base.Widget.AppCompat.Button"
                android:clickable="true"
                android:onClick="respondToButtonClick"
                android:contentDescription="@string/streamer_app_title" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_app_title"
                android:id="@+id/my_scores_app"
                android:background="@color/orange"
                android:layout_marginTop="@dimen/buttonMargin"
                android:layout_below="@+id/media_streamer"
                android:layout_alignLeft="@+id/media_streamer"
                android:layout_alignStart="@+id/media_streamer"
                android:layout_alignRight="@+id/media_streamer"
                android:layout_alignEnd="@+id/media_streamer"
                android:textColor="@color/white"
                android:onClick="respondToButtonClick"
                android:contentDescription="@string/score_app_title" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lib_app_title"
                android:id="@+id/lib_app"
                android:background="@color/orange"
                android:layout_below="@+id/my_scores_app"
                android:layout_alignLeft="@+id/my_scores_app"
                android:layout_alignStart="@+id/my_scores_app"
                android:layout_alignRight="@+id/my_scores_app"
                android:layout_alignEnd="@+id/my_scores_app"
                android:layout_marginTop="@dimen/buttonMargin"
                android:textColor="@color/white"
                android:onClick="respondToButtonClick"
                android:contentDescription="@string/lib_app_title" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_it_bigger_app_title"
                android:id="@+id/bb_app"
                android:layout_marginTop="@dimen/buttonMargin"
                android:background="@color/orange"
                android:layout_below="@+id/lib_app"
                android:layout_alignLeft="@+id/lib_app"
                android:layout_alignStart="@+id/lib_app"
                android:layout_alignRight="@+id/lib_app"
                android:layout_alignEnd="@+id/lib_app"
                android:textColor="@color/white"
                android:onClick="respondToButtonClick"
                android:contentDescription="@string/build_it_bigger_app_title" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reader_app_title"
                android:id="@+id/becon_reader_app"
                android:layout_marginTop="@dimen/buttonMargin"
                android:background="@color/orange"
                android:layout_below="@+id/bb_app"
                android:layout_alignLeft="@+id/bb_app"
                android:layout_alignStart="@+id/bb_app"
                android:layout_alignRight="@+id/bb_app"
                android:layout_alignEnd="@+id/bb_app"
                android:textColor="@color/white"
                android:onClick="respondToButtonClick"
                android:contentDescription="@string/reader_app_title" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capstone_app_title"
                android:id="@+id/button"
                android:layout_marginTop="@dimen/buttonMargin"
                android:background="@color/red"
                android:layout_below="@+id/becon_reader_app"
                android:layout_alignLeft="@+id/becon_reader_app"
                android:layout_alignStart="@+id/becon_reader_app"
                android:layout_alignRight="@+id/becon_reader_app"
                android:layout_alignEnd="@+id/becon_reader_app"
                android:textColor="@color/white"
                android:onClick="respondToButtonClick"
                android:contentDescription="@string/capstone_app_title" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>